--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "Build a component-based chat-client using jQuery",
   "dependencies": {
+    "axios": "^0.19.0",
     "chai": "^4.1.2",
     "jquery": "^3.3.1",
     "mocha": "^5.2.0",
